--- a/src/Resources/views/Administrator/activity.html.twig
+++ b/src/Resources/views/Administrator/activity.html.twig
@@ -5,14 +5,14 @@
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
 <main class="main">
-    {% include 'header_main.html.twig' %}
+    <br>
     <div class="container-fluid">
         <div class="animated fadeIn">
             <!-- Page Header-->
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                     <h3 class="display-4">Movimientos y mas</h3>
-                    <p class="lead">Revisa tu actividad con Cuckeat</p>
+                    <p class="lead">Revisa tu actividad con Tueat</p>
                 </div>
             </div>
 
@@ -35,15 +35,15 @@
                                 </thead>
                                 <tbody>
                                     {#----------INICIO--------------#}
-                                    {% for data in actividad %}
-                                        <tr>
-                                            <td>{{data.paymentMethod}}</td>
-                                            <td>{{data.timestamp.timestamp | date('Y-m-d H:i:s')}}</td>
-                                            <td>{{data.amount}}</td>
-                                        </tr>
-                                    {% endfor %}
-                                  
-                                    
+                                    {% if activity is not empty %}
+                                        {% for data in activity %}
+                                            <tr>
+                                                <td>{{data.paymentMethod}}</td>
+                                                <td>{{data.timestamp.timestamp | date('Y-m-d H:i:s')}}</td>
+                                                <td>{{data.amount}}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    {% endif %}    
                                     {#----------FIN--------------#} 
                                 </tbody>
                             </table>
