--- a/src/Resources/views/Administrator/settings.html.twig
+++ b/src/Resources/views/Administrator/settings.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-    Account
+    Configuración
 {% endblock %}
 {% block body %}
     <main class="main">
+        <br />  
         <div class ="container-fluid">
-    {% include 'header_main.html.twig' %}
+  
     
     <div class="animated fadeIn">
 
@@ -13,7 +14,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h3 class="display-4">Configuracion de tu cuenta</h3>
-            <p class="lead">Aqui podras encontrar la configuracion referente a la administracion de tu cuenta Cuckeat</p>
+            <p class="lead">Aqui podras encontrar la configuracion referente a la administracion de tu cuenta Tueat</p>
         </div>
     </div>
 
