--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %}
-    Category
+    Categorias
 {% endblock %}
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
 <main class="main">
-    {% include 'header_cafeteria.html.twig' %}
+    
+    <br>
     <div class="container-fluid">
         <div class="animated fadeIn">
             <!-- Page Header-->
