--- a/src/Resources/views/Menu/product.html.twig
+++ b/src/Resources/views/Menu/product.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
-{% set title = 'Product'%}
+{% block title %}
+    Productos
+{% endblock %}
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
     {% block body %}
         <main class="main">   
-            {% include 'header_cafeteria.html.twig' %}
+             <br>
             <div class="container-fluid">
                 <div class="animated fadeIn">
                     <!-- Page Header-->
