--- a/templates/header_cafeteria.html.twig
+++ b/templates/header_cafeteria.html.twig
@@ -3,7 +3,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-7">
-              <h1 class="h2 page-title">{{cafeteria|title}}</h1>
+              <h1 class="h2 page-title">Bienvenido {{cafeteria|title}}</h1>
               <div class="text-muted page-desc">Panel de administración</div>
             </div>
 
@@ -41,8 +41,6 @@
                     </div>
                   </div>
                 </div>
-      <!-- Breadcrumb -->
-      <ol class="">
-      </ol>
+ <br>
       <!-- fin Breadcrumb -->
 <!-- FIN HEADER MAIN -->
