--- a/src/Resources/views/AppCreator/app.html.twig
+++ b/src/Resources/views/AppCreator/app.html.twig
@@ -1,1 +1,53 @@
-{# empty Twig template #}
+{% extends 'base.html.twig' %}
+{% block title %}
+    Arrastra y suelta
+{% endblock %}
+
+
+
+{% block stylesheets %}
+     <link href="{{asset('css/draganddrop.css')}}" rel="stylesheet">
+{% endblock %}
+
+{% block body %}
+
+ <main class="main"> 
+     <br>
+     <div class="container-fluid">
+<div class="animated fadeIn">
+    
+        <!-- Page Header-->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h3 class="display-4">Configuracion de tu cuenta</h3>
+            <p class="lead">Aqui podras encontrar la configuracion referente a la administracion de tu cuenta Tueat</p>
+        </div>
+    </div>
+    
+<div class="grid">
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+    </div>
+    
+    </div>
+    </div>
+ </main>
+
+
+{% endblock %}
+
+
+
+    {% block javascripts %}
+ <script src="{{ asset('vendors/js/packery.pkgd.js') }}"></script>
+ <script src="{{ asset('vendors/js/draggabilly.pkgd.js') }}"></script>
+ <script src="{{ asset('js/views/draganddrop.js') }}"></script>
+    {% endblock %}
+
