--- a/src/Resources/views/POS/access.html.twig
+++ b/src/Resources/views/POS/access.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
-{% set title = 'Record'%}
+{% block title %} Accesos {% endblock %}
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
 <main class="main">
-    {% include 'header_cafeteria.html.twig' %}
+    <br>
     <div class="container-fluid">
         <div class="animated fadeIn">
             <!-- Page Header-->
