--- a/src/Resources/views/Reports/data.html.twig
+++ b/src/Resources/views/Reports/data.html.twig
@@ -1,14 +1,24 @@
 {% extends 'base.html.twig' %}
-{% block title %} Ingresos {% endblock title %}
+{% block title %} Datos {% endblock title %}
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
     
 {% block body %}
 <main class="main">
-{% include 'header_main.html.twig' %}  {# CAMBIAR POR HEADER CAFETERIA#}
 
+ <br>
 <div class="container-fluid">
   <div class="animated fadeIn">
       
+              <!-- Page Header-->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h3 class="display-4">Configuracion de tu cuenta</h3>
+            <p class="lead">Aqui podras encontrar la configuracion referente a la administracion de tu cuenta Tueat</p>
+        </div>
+    </div>
+      
+      
+     
   <div class="row">
     <div class="col-lg-12 col-md-6 mb-4">
       <ul class="nav nav-tabs" role="tablist">
