--- a/src/Resources/views/dashboard.html.twig
+++ b/src/Resources/views/dashboard.html.twig
@@ -3,10 +3,10 @@
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
 <main class="main">
-{% include 'header_main.html.twig' %}
+{% include 'header_cafeteria.html.twig' %}
 <div class="container-fluid">
 <div class="animated fadeIn">
-
+    
     <!-- TARJETAS -->
       <div class="row">
     <!-- 1ERA TARJETA -->
@@ -38,7 +38,7 @@
         <!-- FIN 2 -->
 
     <!-- 3RA TARJETA -->
-        <div class="col-sm-6 col-lg-3">
+        <div  class="col-sm-6 col-lg-3">
           <div class="card text-white bg-warning">
             <div class="card-body pb-0">
               <h4 class="mb-0">[#]</h4>
@@ -429,7 +429,7 @@
                     </li>
                     <li>
                       <i class="icon-wallet"></i>
-                      <span class="title">Cuckwallet</span>
+                      <span class="title">Tueatcash</span>
                       <span class="value">[#]</span>
                       <div class="bars">
                         <div class="progress progress-xs">
