--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -12,16 +12,14 @@
           <strong>Administrador</strong>
         </div>
         <div class="text-muted">
-          <small>Cuckoo Box</small>
+            <small>{{cafeteria|title}}</small>
         </div>
 
-            <div class="dropdown-menu">
+            <div class="dropdown-menu" id = "cafeterias">
               <div class="dropdown-header text-center">
                 <strong>Mis cafeterias</strong>
               </div>
-              <a class="dropdown-item" href="#"><i class="fa fa-user-o"></i> Cuckoo Coffee</a>
-              <a class="dropdown-item" href="#"><i class="fa fa-user-o"></i> Cuckoo Box</a>
-              <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Cerrar sesión</a>
+              
             </div>
 
       </div> <!-- sidebar header-->
