--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,6 +62,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
         
         <script src="{{asset('js/views/main.js')}}"></script>
+        <script src="{{asset('vendors/js/js.cookie.js')}}"></script>
+            
+        <script type="text/javascript">
+            var cafeterias = Cookies.getJSON('CAFETERIAS');
+            cafeterias.forEach(function(element){  
+            var route = '{{path( app.request.attributes.get('_route') , {'cafeteria': 'currentCafeteria'  }) }}'
+            route = route.replace('currentCafeteria', element.toLowerCase().replace(/\+/g, '_'));
+               $('#cafeterias').append("<a class='dropdown-item' href=" + route +"><i class='fa fa-user-o'></i>" +  element.replace(/\+/g, ' ') +"</a>");
+            });
+        </script>
         
         {% block javascripts %}
             
