--- a/src/Resources/views/dashboard.html.twig
+++ b/src/Resources/views/dashboard.html.twig
@@ -3,7 +3,7 @@
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
 {% block body %}
 <main class="main">
-{% include 'header_cafeteria.html.twig' %}
+{% include 'header_dashboard.html.twig' %}
 <div class="container-fluid">
 <div class="animated fadeIn">
     
