--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -19,17 +19,75 @@
                     {% endif %}    
                 </div>
             </div>
-            <!-- COMFIGURACION DE CATEGORIAS   -->
-            <div class="card">
-              <!-- TITULO -->
-                <div class="card-header">
-                    <h4 class="card-title">Cafeterias</h4>
-                </div>
-                <div class="card-body">
-                    {{form_start (formCreateMenu) }}
-                    {{form_end (formCreateMenu) }}
-                    
-                    
+            <div class="row">
+                <div class="col-lg-12 col-md-6 mb-4">
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#create" role="tab" aria-controls="tablas"><i class="fa fa-file-text-o"></i>Crear</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#exist" role="tab" aria-controls="graficas"><i class="fa fa-bar-chart"></i>Existentes</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="create" role="tabpanel">
+                            <div class="animated fadeIn">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h4 class="card-title">Información del producto</h4>
+                                    </div>
+                                    <div class="card-body">
+                                        {{ form_start(formCreateMenu) }}
+                                        {{ form_end(formCreateMenu) }}
+                                        <hr/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="exist" role="tabpanel">
+                            <div class="animated fadeIn">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-12 mb-4">
+                                                <div class="row">
+                                                    <div class="col-sm-5">
+                                                        <h3 class="card-title clearfix mb-0"> </h3>
+                                                    </div>
+                                                </div>
+                                                <!-- TABLAS -->
+                                                <table class= "table table-responsive-sm table-hover table-outline mb-0 ">
+                                                    <!-- TITULOS DE TABLA -->
+                                                    <thead class="thead-light ">
+                                                        <tr>
+                                                            <th>#</th>
+                                                            <th>Nombre del Menu</th>
+                                                            <th>Descripción</th>
+                                                            <th>Menu Padre</th>
+                                                            <th>Editar</th>
+                                                            <th>Eliminar</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <!-- tbody de tabla -->
+                                                    <tbody>
+                                                        <!-- FILA 1 -->
+                                                        {{ dump(menus) }}
+                                                        {% for menu in menus %}
+                                                            <tr>
+                                                                <td> </td>
+                                                        {% endfor %}
+
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                        <hr/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>                              
                 </div>
             </div>
         </div>
